student api controller

--- a/src/WebApplication2/project.json
+++ b/src/WebApplication2/project.json
@@ -31,7 +31,7 @@
       "version": "1.0.0-preview2-final"
     },
     "Microsoft.EntityFrameworkCore.Tools.DotNet": {
-      "version": "1.0.0-preview2-final"
+      "version": "1.0.0"
     },
     "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
       "version": "1.0.0-preview2-final",
